kaneo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaneo
spec:
  selector:
    io.kompose.service: kaneo
  ports:
    - name: main
      port: 5173
      targetPort: 5173
