kaneo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kaneo-alias-redirect
  namespace: kaneo-prod
spec:
  redirectRegex:
    permanent: true
    regex: ^https?://kano\.gewis\.nl(.*)$
    replacement: https://kaneo.gewis.nl${1}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kaneo
  namespace: kaneo-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kaneo.gewis.nl`)
      kind: Rule
      services:
        - name: kaneo
          port: 5173
    - match: Host(`kano.gewis.nl`)
      kind: Rule
      middlewares:
        - name: kaneo-alias-redirect
      services:
        - name: kaneo
          port: 5173
